--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "almond": "0.2.x",
     "requirejs": "2.1.x",
     "q": "~1.0.0",
-    "bootstrap": "~3.0.3"
+    "bootstrap": "~3.0.3",
+    "jasmine-as-promised": "~0.0.6"
   },
   "devDependencies": {
     "angular-mocks": "1.2.x"
